# block_mesh_pop

./: Cargo.toml  README.md
benches/: greedy.rs  visible_faces.rs
examples/: cube.rs  generate_mesh.rs  greedy.rs  hd.rs  large.rs  layers.rs  pop.rs  visible_faces.rs
src/: buffer.rs  greedy.rs  lib.rs  visible_faces.rs  visible_faces_staged.rs
src/geometry/: axis.rs  face.rs  mod.rs  quad.rs  shape.rs
src/render/: easing.rs  lod_bindings.wgsl  lod_functions.wgsl  material.rs  material.wgsl  mod.rs
