[package]
name = "bevy_voxel_mesh"
version = "0.0.1"
edition = "2021"

[lib]
name = "bevy_voxel_mesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_math = "0.11"

[dev-dependencies]
bevy = "0.11"
bevy_dolly = "0.0.1"
criterion = "0.3"


[[bench]]
name = "visible_faces"
harness = false

[[bench]]
name = "greedy"
harness = false
