[package]
name = "block_mesh_pop"
version = "0.0.1"
edition = "2021"

[lib]
name = "block_mesh_pop"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_math = "0.11"
bytemuck = "1.13.1"
seq-macro = "0.3.5"

[dev-dependencies]
bevy = "0.11"
bevy_dolly = "0.0.1"
criterion = "0.3"


[[bench]]
name = "visible_faces"
harness = false

[[bench]]
name = "greedy"
harness = false
